# drt-vm-executor-rs

./: CHANGELOG.md  Makefile
c-api/src/: capi_executor.rs  capi_instance.rs  capi_vm_hooks.rs
vm-executor/: Cargo.toml
vm-executor-wasmer/: Cargo.toml
vm-executor-wasmer/src/: wasmer_metering.rs  wasmer_service.rs
vm-executor-wasmer/tests/common/: test_wat.rs
