[package]
name = "dharitri-chain-vm-executor"
version = "0.4.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Ovidiu Stinga <ovidiu.stinga@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-vm-executor-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri VM executor interface"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

